# citron

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
src/: .editorconfig  CMakeLists.txt  CMakePresets.json  Citron.sln  Common.props  vcpkg-configuration.json  vcpkg.json
src/IR0/: CMakeLists.txt  IR0.vcxproj  IR0.vcxproj.filters  RArgument.h  RArgument.ixx  RClassConstructorDecl.cpp  RClassDecl.cpp  RClassMemberFuncDecl.cpp  RClassMemberVarDecl.cpp  RCommonFuncDeclComponent.cpp  RDecl.cpp  RDeclId.cpp  REnumDecl.cpp  REnumElemDecl.cpp  REnumElemMemberVarDecl.cpp  RExp.cpp  RExp.h  RExp.ixx  RExps.h  RInterfaceDecl.cpp  RLambdaDecl.cpp  RLambdaMemberVarDecl.cpp  RLoc.cpp  RLoc.h  RLoc.ixx  RLocs.h  RMember.cpp  RModuleDecl.cpp  RNames.cpp  RNamespaceDecl.cpp  RNamespaceDeclContainerComponent.cpp  RProgram.h  RProgram.ixx  RStmt.cpp  RStmt.h  RStructConstructorDecl.cpp  RStructDecl.cpp  RStructMemberFuncDecl.cpp  RStructMemberVarDecl.cpp  RSymbolId.cpp  (+6 more)
src/IR0/Public/IR0/: IR0Config.h  RAccessor.h  RArgument.h  RBodyDeclOuter.h  RBodyOuter.h  RClass.h  RClassConstructor.h  RClassConstructorDecl.h  RClassDecl.h  RClassMemberFunc.h  RClassMemberFuncDecl.h  RClassMemberVar.h  RClassMemberVarDecl.h  RCommonFuncDeclComponent.h  RDecl.h  RDeclId.h  RDeclWIthOuterTypeArgs.h  REnum.h  REnumDecl.h  REnumElem.h  REnumElemDecl.h  REnumElemMemberVar.h  REnumElemMemberVarDecl.h  RExp.h  RFunc.h  RFuncDecl.h  RFuncDeclContainerComponent.h  RFuncDeclOuter.h  RFuncParameter.h  RFuncReturn.h  RGlobalFunc.h  RGlobalFuncDecl.h  RIdentifier.h  RInterfaceDecl.h  RLambda.h  RLambdaDecl.h  RLambdaMemberVar.h  RLambdaMemberVarDecl.h  RLoc.h  RMember.h  (+27 more)
src/Infra/: CMakeLists.txt  Infra.vcxproj  Infra.vcxproj.filters  Json.cpp  StringWriter.cpp  exports.cpp  pch.h  vcpkg.json
src/Infra/Public/Infra/: Defaults.h  Exceptions.h  Hash.h  IWriter.h  InfraConfig.h  Json.h  NotImplementedException.h  Ptr.h  StringWriter.h  URef.h  Variants.h
src/Logging/: Logger.cpp  Logging.vcxproj  Logging.vcxproj.filters
src/Logging/Public/Logging/: Logger.h  LoggingConfig.h
src/Parser/: Parser.vcxproj  Parser.vcxproj.filters  dllmain.cpp  exports.cpp
src/Symbol/: Accessor.ixx  CMakeLists.txt  Copy.h  Copy.ixx  DeclSymbols.ixx  FuncDeclSymbolComponent.ixx  FuncParameter.ixx  FuncReturn.ixx  GlobalFuncDeclSymbol.ixx  Identifier.ixx  Identifiers.ixx  MAccessor.h  MAccessor.ixx  MBodyDeclOuter.h  MBodyDeclOuter.ixx  MBodyOuter.h  MBodyOuter.ixx  MClass.h  MClass.ixx  MClassConstructor.h  MClassConstructor.ixx  MClassConstructorDecl.h  MClassConstructorDecl.ixx  MClassDecl.h  MClassDecl.ixx  MClassMemberFunc.h  MClassMemberFunc.ixx  MClassMemberFuncDecl.h  MClassMemberFuncDecl.ixx  MClassMemberVar.h  MClassMemberVar.ixx  MClassMemberVarDecl.h  MClassMemberVarDecl.ixx  MCommonFuncDeclComponent.h  MCommonFuncDeclComponent.ixx  MDecl.h  MDecl.ixx  MDeclId.cpp  MEnum.h  MEnum.ixx  (+119 more)
src/Symbol/Struct/: StructMemberFuncDeclSymbol.cs
src/Symbol/public/Symbol/: MBodyDeclOuter.h  MClass.h  (+50 more)
src/Syntax/: CMakeLists.txt  ClassDeclSyntax.cpp  ClassMemberDeclSyntaxes.cpp  ClassMemberDecls.cpp  EmbeddableStmtSyntaxes.cpp  EmbeddableStmts.cpp  EnumDeclSyntax.cpp  ExpSyntaxes.cpp  Exps.cpp  GlobalFuncDeclSyntax.cpp  NamespaceDecl.cpp  NamespaceDeclSyntax.cpp  NamespaceDeclSyntaxElements.cpp  ScriptSyntax.cpp  ScriptSyntaxElements.cpp  StmtSyntaxes.cpp  Stmts.cpp  StructDeclSyntax.cpp  StructMemberDeclSyntaxes.cpp  StructMemberDecls.cpp  Syntax.vcxproj  Syntax.vcxproj.filters  Syntaxes.cpp  Syntaxes.g.cpp  Token.cpp  Tokens.cpp  TypeExpSyntaxes.cpp  TypeExps.cpp  dllmain.cpp  exports.cpp  pch.h
src/SyntaxIR0Translator/: BinOpQueryService.cpp  BinOpQueryService.h  BodyContext.cpp  BodyContext.h  BodyPhaseContext.cpp  BodyPhaseContext.h  CommonTranslation.cpp  CommonTranslation.h  DesignatedErrorLogger.cpp  DesignatedErrorLogger.h  EnumTranslation.cpp  EnumTranslation.h  FuncMatching.cpp  FuncMatching.h  FuncsWithPartialTypeArgsComponent.cpp  FuncsWithPartialTypeArgsComponent.h  INotLocationErrorLogger.h  ImCallableAndSArgsToRExpBinding.cpp  ImCallableAndSArgsToRExpBinding.h  ImCallableAndSArgsToRExpTranslation.cpp  ImCallableAndSArgsToRExpTranslation.h  ImExp.cpp  ImExp.h  ImExpAndMemberNameToImExpBinding.cpp  ImExpAndMemberNameToImExpBinding.h  ImExpAndMemberNameToImExpTranslation.cpp  ImExpAndMemberNameToImExpTranslation.h  ImExpAndSArgsToRExpBinding.cpp  ImExpAndSArgsToRExpBinding.h  ImExpToIrExpTranslation.cpp  ImExpToIrExpTranslation.h  ImExpToReExpTranslation.cpp  ImExpToReExpTranslation.h  IrExp.cpp  IrExp.h  IrExpAndMemberNameToIrExpBinding.cpp  IrExpAndMemberNameToIrExpBinding.h  IrExpAndMemberNameToIrExpTranslation.cpp  IrExpAndMemberNameToIrExpTranslation.h  IrExpToRExpTranslation.cpp  (+45 more)
src/Test/Analysis.InternalDeclSymbolBuilder.Test/: InternalModuleDeclSymbolBuilderTests.cs
src/TestConsole/: TestConsole.cpp  TestConsole.vcxproj  TestConsole.vcxproj.filters
src/TextAnalysis/: Buffer.cpp  Buffer.h  BufferPosition.cpp  BufferPosition.h  CMakeLists.txt  ExpParser.cpp  ExpParser.h  Lexer.cpp  Lexer.h  ParserMisc.cpp  ParserMisc.h  ScriptParser.cpp  ScriptParser.h  StmtParser.cpp  StmtParser.h  TextAnalysis.vcxproj  TextAnalysis.vcxproj.filters  TypeExpParser.cpp  TypeExpParser.h  pch.h
src/TextAnalysis.Tests/: CMakeLists.txt  CommandLexerTests.cpp  ExpParserTests.cpp  ExpParserTests.g.cpp  LexerTests.cpp  ScriptParserTests.cpp  ScriptParserTests.g.cpp  StmtParserTests.g.cpp  TestMisc.cpp  TestMisc.h  TextAnalysis.Tests.vcxproj  TypeExpParserTests.g.cpp  pch.h  test.cpp
src/Tools/: CMakeLists.txt
src/Tools/CodeGenerator/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.vcxproj  CodeGenerator.vcxproj.filters  Misc.cpp  Misc.h  SymbolCodeGenerator.cpp  SymbolCodeGenerator.h  SyntaxCodeGenerator.cpp  SyntaxCodeGenerator.h
src/Tools/SyntaxPrinter/: CMakeLists.txt  SyntaxPrinter.cpp  SyntaxPrinter.vcxproj  SyntaxPrinter.vcxproj.filters  pch.h
src/Tools/TestGenerator/: CMakeLists.txt  TestGenerator.cpp  TestGenerator.vcxproj  TestGenerator.vcxproj.filters  vcpkg.json
(+3082 files in other folders)
